# transfer.sh-cli

./: .gitignore  0.6.x.md  Cargo.toml  README.md
src/: 0.5.2.rs  0.6.1.rs  main.rs
