[package]
name = "transfer"
version = "0.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }


[profile.release]
strip = true
opt-level = "s"
lto = true