[package]
name = "transfer"
version = "0.6.4"
authors = ["Dajmond"]
description = "Unofficially Rust client for transger.sh"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = {version = "0.10", features = ["vendored"]}

[profile.release]
strip = true
opt-level = "s"
lto = true